--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate Project</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allan:wght@400;700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@100..900&family=Noto+Sans+Symbols:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -15,7 +16,9 @@
 <body>
     <div class="main">
         <div class="menu">
-            <div class="menu-logo"><img src="assets/MYLOGO2.png" alt="My Logo"></div>
+            <div class="menu-logo">
+                <img src="assets/MYLOGO2.png" alt="My Logo">
+            </div>
             <div class="menu-options">
                 <div>
                     <p>home.</p>
@@ -33,6 +36,9 @@
                     <p>contacts.</p>
                 </div>
             </div>
+            <div class="menu-burger">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
         <div class="first-div">
             <p class="first-div-title">Awesome Title</p>
@@ -44,7 +50,9 @@
             </div>
         </div>
         <div class="second-div">
-            <div class="second-div-pic"><img src="assets/pic1.svg" alt="picture one"></div>
+            <div class="second-div-pic">
+                <img src="assets/pic1.svg" alt="picture one">
+            </div>
             <div class="second-div-text">
                 <div>
                     <p class="second-div-head">Lorem</p>
